--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "tap test/*.js"
+    "test": "DEEPL_KEY=123 tap test/*.js",
+    "start": "node src/index.js",
+    "mock_deepl": "node test_utils/mock_deepl.js",
+    "start_with_mock": "DEEPL_KEY=123 DEEPL_URL=http://localhost:8990 node src/index.js",
+    "dev": "npm run mock_deepl & npm run start_with_mock"
   },
   "dependencies": {
     "lmdb": "^2.9.1",
-    "nostr": "^0.2.8"
+    "nostr": "^0.2.8",
+    "nostr-tools": "^1.17.0"
   },
   "devDependencies": {
-    "tap": "~0.2.5"
+    "@tapjs/sinon": "^1.1.17",
+    "sinon": "^17.0.1",
+    "tap": "^18.6.1"
   }
 }
