--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dev": "npm run mock_deepl & npm run start_with_mock"
   },
   "dependencies": {
+    "@apple/app-store-server-library": "^0.2.0",
+    "dotenv": "^16.3.1",
     "lmdb": "^2.9.1",
     "nostr": "^0.2.8",
     "nostr-tools": "^1.17.0"
