--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@apple/app-store-server-library": "^0.2.0",
     "dotenv": "^16.3.1",
     "lmdb": "^2.9.1",
-    "nostr": "^0.2.8",
-    "nostr-tools": "^1.17.0"
+    "nostr": "^0.2.8"
   },
   "devDependencies": {
     "@tapjs/sinon": "^1.1.17",
