Express.js refactor, API improvements, and supertest integration
This commit brings the following changes:
- Refactor server to use express.js (instead of a custom router)
- Refactor NIP-98 authentication to become an express.js middleware
- Use supertest for testing (Improves test readability, realism, and makes it possible to test express.js)
- Improve translate endpoint to use NIP-98 for authentication
- Add NIP-98 auth support for GET requests
- Improve account creation to grab the pubkey directly from the auth header, thus removing the need for a custom payload

Testing
--------

All unit tests are passing.

Closes: https://github.com/damus-io/api/issues/1
Signed-off-by: Daniel D’Aquino <daniel@daquino.me>
Reviewed-by: William Casarin <jb55@jb55.com>
Signed-off-by: William Casarin <jb55@jb55.com>

--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   },
   "dependencies": {
     "@apple/app-store-server-library": "^0.2.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "lmdb": "^2.9.1",
     "nostr": "^0.2.8"
   },
   "devDependencies": {
     "@tapjs/sinon": "^1.1.17",
     "sinon": "^17.0.1",
+    "supertest": "^6.3.3",
     "tap": "^18.6.1"
   }
 }
