Add dependencies in preparation for lightning payment processing
In this commit, the following dependencies were added:
1. lnsocket: To allow us to process lightning payments for Damus Purple
2. nostr-tools: To allow conversion between npubs and hex-format pubkeys
3. proxyquire: To allow stubbing of LNSocket during tests (Not possible via Sinon because it does not support stubbing of default commonjs exports, which is the case of LNSocket)
4. cors: Express.js middleware allowing CORS policies to be set (To avoid CORS errors from the website)

Signed-off-by: Daniel D’Aquino <daniel@daquino.me>

--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "dependencies": {
     "@apple/app-store-server-library": "^0.2.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lmdb": "^2.9.1",
-    "nostr": "^0.2.8"
+    "lnsocket": "^0.3.3",
+    "nostr": "^0.2.8",
+    "nostr-tools": "^2.1.2",
+    "proxyquire": "^2.1.3"
   },
   "devDependencies": {
     "@tapjs/sinon": "^1.1.17",
