--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apple/app-store-server-library": "^0.2.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lmdb": "^2.9.1",
