Create env setting to allow http use on NIP-98 for testing purposes
Forcing https in production is a good idea and necessary in some reverse
proxying situations, but for local testing http should be allowed for
ease of testing.

This commit adds an optional ENV variable to allow HTTP on NIP-98 auth

Signed-off-by: Daniel D’Aquino <daniel@daquino.me>
Reviewed-by: William Casarin <jb55@jb55.com>
Signed-off-by: William Casarin <jb55@jb55.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "damus-api": "./src/index.js"
   },
   "scripts": {
-    "test": "DEEPL_KEY=123 tap test/*.test.js",
+    "test": "ALLOW_HTTP_AUTH=\"true\" DEEPL_KEY=123 tap test/*.test.js",
     "start": "node src/index.js",
     "mock_deepl": "node test_utils/mock_deepl.js",
     "start_with_mock": "DEEPL_KEY=123 DEEPL_URL=http://localhost:8990 node src/index.js",
