Add type check tooling
This adds typescript tooling for type checking during development, as an
extra tool to help debugging and improve robustness of Javascript code

This does not add a compilation step or any dependencies or changes on
existing node.js environment.

It only adds an npm script that developers can run locally to do a type
check.

Type checks can be done on JS files as they are, or improved with the
use of `// @ts-check` and JSDoc comments with types documented

Signed-off-by: Daniel D’Aquino <daniel@daquino.me>
Reviewed-by: William Casarin <jb55@jb55.com>
Signed-off-by: William Casarin <jb55@jb55.com>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "start": "node src/index.js",
     "mock_deepl": "node test_utils/mock_deepl.js",
     "start_with_mock": "DEEPL_KEY=123 DEEPL_URL=http://localhost:8990 node src/index.js",
-    "dev": "npm run mock_deepl & npm run start_with_mock"
+    "dev": "npm run mock_deepl & npm run start_with_mock",
+    "type-check": "tsc --checkJs --allowJs src/*.js --noEmit --skipLibCheck",
+    "type-check-path": "tsc --checkJs --allowJs --noEmit --skipLibCheck"
   },
   "dependencies": {
     "@apple/app-store-server-library": "^0.2.0",
@@ -34,6 +36,7 @@
     "@tapjs/sinon": "^1.1.17",
     "sinon": "^17.0.1",
     "supertest": "^6.3.3",
-    "tap": "^18.6.1"
+    "tap": "^18.6.1",
+    "typescript": "^5.3.3"
   }
 }
