--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mock_deepl": "node test_utils/mock_deepl.js",
     "start_with_mock": "DEEPL_KEY=123 DEEPL_URL=http://localhost:8990 ENABLE_HTTP_AUTH=\"true\" node src/index.js",
     "dev": "npm run mock_deepl & npm run start_with_mock",
+    "dev-debug": "npm run mock_deepl & DEEPL_KEY=123 DEEPL_URL=http://localhost:8990 ENABLE_HTTP_AUTH=\"true\" node inspect src/index.js",
     "type-check": "tsc --checkJs --allowJs src/*.js --noEmit --skipLibCheck",
     "type-check-path": "tsc --checkJs --allowJs --noEmit --skipLibCheck"
   },
