direnv: dotenv compat
I needed this for loading my local .env since it didn't seem to be
picking it up.

Signed-off-by: William Casarin <jb55@jb55.com>

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,12 @@
 use nix
 
-source .env || :
+# dotenv compat
+if [[ -f .env ]]; then
+  source .env
 
-export DEEPL_KEY
+  while IFS='=' read -r key value; do
+    if [[ -n $key ]]; then
+      export "$key"
+    fi
+  done < .env
+fi
