translate: don't translate repost data
This is apparently accounting for many translation requests.

I pushed a fix for future damus versions, but in the meantime this stops
us from burning money.

Follow up question: why are reposts passing the apple-ai language check?

Cc: Terry Yiu <terryyiu@gmail.com>
Reported-by: Semisol <hi@semisol.dev>
Signed-off-by: William Casarin <jb55@jb55.com>

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "ALLOW_HTTP_AUTH=\"true\" DEEPL_KEY=123 tap test/*.test.js",
+    "test-translate": "ALLOW_HTTP_AUTH=\"true\" TRANSLATION_PROVIDER=mock tap test/translate.test.js",
     "debug-test": "ALLOW_HTTP_AUTH=\"true\" DEEPL_KEY=123 tap test/*.test.js --timeout=2400",
     "start": "node src/index.js",
     "mock_deepl": "node test_utils/mock_deepl.js",
